--- a/Todo.Web/Components/Pages/Home.razor
+++ b/Todo.Web/Components/Pages/Home.razor
@@ -1,7 +1,25 @@
 ﻿@page "/"
+@using Todo.Web.Components.TodoComponent
 
-<PageTitle>Home</PageTitle>
+<title>Projects</title>
+<div class="projects">
+    @foreach (var project in Projects)
+    {
+        <div class="project">
+            <h4><a href="/project/@project.Id">@project.Name</a></h4>
+        </div>
+    }
+    <button class="new-project" @onclick="() => AddProject()">Create new project</button>
+</div>
 
-<h1>Hello, world!</h1>
+@code {
+    public List<Project> Projects { get; set; } = new List<Project>
+    {
+        new Project { Id = 0, Name = "Default" },
+        new Project { Id = 1, Name = "Test" }
+    };
 
-Welcome to your new app.
+    private void AddProject(){
+        Console.WriteLine("Add a new project");
+    }
+}
