--- a/Todo.Web/Components/Layout/MainLayout.razor
+++ b/Todo.Web/Components/Layout/MainLayout.razor
@@ -6,8 +6,11 @@
     </div>
 
     <main>
+        
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <div class=".top-row-title">
+                <h1>Title</h1>
+            </div>
         </div>
 
         <article class="content px-4">
