--- a/Todo.Web/Components/App.razor
+++ b/Todo.Web/Components/App.razor
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
-    <link rel="stylesheet" href="app.css"/>
+    <link rel="stylesheet" href="styles/app.css"/>
     <link rel="stylesheet" href="Todo.Web.styles.css"/>
-    <link rel="stylesheet" href="projectPage.css"/>
+    <link rel="stylesheet" href="styles/projectPage.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
 </head>
