--- a/Todo.Web/Components/Layout/MainLayout.razor
+++ b/Todo.Web/Components/Layout/MainLayout.razor
@@ -7,9 +7,9 @@
 
     <main>
         
-        <div class="top-row px-4">
-            <div class=".top-row-title">
-                <h1>Title</h1>
+        <div class="top-row">
+            <div class="top-row-title">
+                <h1>Taskify</h1>
             </div>
         </div>
 
