Removed unused files

--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -63,7 +63,7 @@
         CurrentProject = new Project
         {
             Id = ProjectId,
-            Name = "Default",
+            Name = "Default-Project",
             TodoLists = new List<TodoList>
             {
                 new TodoList
