Bg color for html/body

--- a/Todo.Web/wwwroot/styles/app.css
+++ b/Todo.Web/wwwroot/styles/app.css
@@ -1,6 +1,8 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #DED7D7;
 }
+
 
 a, .btn-link {
     color: #006bb7;
