Working on front Page, (CSS not updating?)

--- a/Todo.Web/Components/App.razor
+++ b/Todo.Web/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="styles/app.css"/>
     <link rel="stylesheet" href="Todo.Web.styles.css"/>
+    <link rel="stylesheet" href="styles/homePage.css"/>
     <link rel="stylesheet" href="styles/projectPage.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
