--- a/Todo.Web/Components/Layout/MainLayout.razor
+++ b/Todo.Web/Components/Layout/MainLayout.razor
@@ -7,11 +7,11 @@
 
     <main>
         
-        <div class="top-row">
+        @*<div class="top-row">
             <div class="top-row-title">
                 <h1>Taskify</h1>
             </div>
-        </div>
+        </div>*@
 
         <article class="content px-4">
             @Body
