--- a/Todo.Web/Components/Layout/NavMenu.razor
+++ b/Todo.Web/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Projects
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> My Projects
             </NavLink>
         </div>
 
