--- a/Todo.Web/Components/Pages/Home.razor.css
+++ b/Todo.Web/Components/Pages/Home.razor.css
@@ -22,9 +22,10 @@
 .new-project{
     width: 250px;
     height: 150px;
-    background: linear-gradient(#0C2364, #3A0647);
-    background-color:#0C2364;
-    color:white;
+    /*background: linear-gradient(#0C2364, #3A0647);
+    background-color:#0C2364;*/
+    background-color: #f1ecec;
+    color:black;
     border-radius: 5%;
     cursor: pointer;
 }
@@ -49,5 +50,5 @@ a .project-name {
     background-color: #05163D;
 }
 .new-project:hover{
-    background-color: #05163D;
+    background-color: #ece6e6;
 }
