--- a/Todo.Web/Components/Account/Pages/Login.razor
+++ b/Todo.Web/Components/Account/Pages/Login.razor
@@ -12,15 +12,15 @@
 
 <PageTitle>Log in</PageTitle>
 
-<h1>Log in</h1>
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    @*<div class="col-md-4">*@
+    <h2>Log in</h2>
         <section>
             <StatusMessage Message="@errorMessage"/>
             <EditForm Model="Input" method="post" OnValidSubmit="LoginUser" FormName="login">
                 <DataAnnotationsValidator/>
-                <h2>Use a local account to log in.</h2>
-                <hr/>
+                @*<h2>Use a local account to log in.</h2>
+                <hr/>*@
                 <ValidationSummary class="text-danger" role="alert"/>
                 <div class="form-floating mb-3">
                     <InputText @bind-Value="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com"/>
@@ -54,14 +54,14 @@
                 </div>
             </EditForm>
         </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*</div>*@
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
             <hr/>
             <ExternalLoginPicker/>
         </section>
-    </div>
+    </div>*@
 </div>
 
 @code {
