--- a/Todo.Web/Components/Account/Pages/Login.razor
+++ b/Todo.Web/Components/Account/Pages/Login.razor
@@ -37,10 +37,25 @@
                         <InputCheckbox @bind-Value="Input.RememberMe" class="darker-border-checkbox form-check-input"/>
                         Remember me
                     </label>
-                </div>
-                <div>
-                    <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
+</div>          
+           <div>
+    <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+    <h3>Or signup with</h3>
+</div>
+
+<div class="button-container">
+    <!-- Google Button -->
+    <button class="circular-button">
+        <img src="./Images/google.png" alt="Google Logo"/>
+    </button>
+    
+    <!-- Facebook Button -->
+    <button class="circular-button">
+        <img src="./Images/google.png" alt="Facebook Logo"/>
+    </button>
+</div>
+
+                
                 <div>
                     <p>
                         <a href="Account/ForgotPassword">Forgot your password?</a>
