--- a/Todo.Web/Components/Account/Pages/Login.razor.css
+++ b/Todo.Web/Components/Account/Pages/Login.razor.css
@@ -3,13 +3,20 @@ h2{
     color: white;
 }
 
+h3{
+    margin-top: 5%;
+    color: gray;
+    font-size: 16px;
+    text-align: center;
+}
+
 p{
     color: white;
     text-align: center;
 }
 
 .form-label{
-    color: white;
+    size: 3pt;
 }
 .container{
     display: flex;
@@ -24,6 +31,30 @@ p{
 
 .text-field{
     
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+.circular-button {
+    width: 50px;
+    height: 50px;
+    background-color: #5f6c79;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto 0; /* Centering and spacing */
+    cursor: pointer;
+}
+
+.circular-button img {
+    width: 70%; 
 }
 
 .auth-button {
