login with google and facebook

--- a/Todo.Web/Components/Account/Pages/Login.razor
+++ b/Todo.Web/Components/Account/Pages/Login.razor
@@ -51,10 +51,9 @@
     
     <!-- Facebook Button -->
     <button class="circular-button">
-        <img src="./Images/google.png" alt="Facebook Logo"/>
+        <img src="./Images/facebook_logo.svg" alt="Facebook Logo"/>
     </button>
 </div>
-
                 
                 <div>
                     <p>
