--- a/Todo.Web/Components/Pages/Home.razor
+++ b/Todo.Web/Components/Pages/Home.razor
@@ -2,7 +2,9 @@
 @rendermode InteractiveServer
 @using Todo.Web.Components.TodoComponent
 @inject NavigationManager NavigationManager
+@using Microsoft.AspNetCore.Authorization
 
+@attribute [Authorize]
 
 <title>Projects</title>
 
