Added the missing end tag
Co-authored-by: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -3,7 +3,7 @@
 @rendermode InteractiveServer
 
 
-<title>@CurrentProject.Name</title
+<title>@CurrentProject.Name</title>
 
 <h1>@CurrentProject.Name</h1>
 
