--- a/Todo.Web/Components/Account/Pages/Register.razor
+++ b/Todo.Web/Components/Account/Pages/Register.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Todo.Web.Data
+@using Todo.Core.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
@@ -72,8 +72,8 @@
     {
         //var user = CreateUser();
         var user = new ApplicationUser{
-            Name = Input.UserName,
-            Email = Input.Email,
+            UserName = Input.UserName,
+            Email = Input.Email
         };
     
 
