--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -1,4 +1,8 @@
 @page "/project/{projectId:int}"
+@using Microsoft.IdentityModel.Tokens
+@using Todo.Api.Dtos.ProjectDtos
+@using Todo.Api.Dtos.TodoItemDtos
+@using Todo.Api.Dtos.TodoListDtos
 @using Todo.Web.Components.TodoComponent
 @rendermode InteractiveServer
 
@@ -8,7 +12,7 @@
 <h1>@CurrentProject.Name</h1>
 
 <div class="todo-lists-container">
-    @if(CurrentProject.TodoLists != null){
+    @if(!CurrentProject.TodoLists.IsNullOrEmpty()){
         @foreach (var todoList in CurrentProject.TodoLists)
         {
             <div class="todo-list-container">
@@ -18,24 +22,25 @@
                     <img src="images/menu.png"/>
                 </div>
 
-                @if(todoList.Tasks != null){  
-                        @foreach (var task in todoList.Tasks)
+                @if(!todoList.TodoItems.IsNullOrEmpty()){  
+                        @foreach (var task in todoList.TodoItems)
                         {
                             <div class = "task-container" @onclick="() => ViewTask=true">
-                                <p><span>@task.Name</span></p>
-                                @if(task.Duration > 0){
+                                <p><span>@task.Title</span></p>
+                                <p>Priority: @task.Priority</p>
+                                @*@if(task. > 0){
                                     <p>Duration: @task.Duration</p>
                                 }
                                 @if(task.TimeStart!="" || task.TimeEnd!=""){
                                 <p>Time: @task.TimeStart - @task.TimeEnd</p>
-                                }
+                                }*@
                                 <div class="task-lower-part">
                                     <div class = "todo-date">
-                                        @if(task.StartDate == "" && task.EndDate != ""){
+                                        @*@if(task.StartDate == "" && task.EndDate != ""){
                                             <p>@task.EndDate</p>
                                         } else if (task.StartDate != "" && task.EndDate != "") {
                                             <p>@task.StartDate - @task.EndDate</p>
-                                        }
+                                        }*@
                                     </div>
                                     <button @onclick="() => ModifiyTask(task)">Modifiy</button>
                                 </div>
@@ -62,98 +67,81 @@
 @code {
     [Parameter]
     public int ProjectId { get; set; }
-    public required Project CurrentProject { get; set; }
-    
+    public required ProjectDto CurrentProject { get; set; }
+
     private bool IsAddingTask { get; set; } = false;
-    private TodoList CurrentListAddingTask { get; set; } = null;
+    private TodoListDto CurrentListAddingTask { get; set; }
     private string TextValue = "";
 
     private bool ViewTask {get; set; } = false;
 
     //hardcoded TODO List
-    private List<TodoTask> hobbyTasks = new List<TodoTask>{
-        new TodoTask { Name = "Play football with friends", Duration = 90, TimeStart="5:15 AM", TimeEnd="6:45 AM", StartDate="30-09-24", EndDate="30-09-24", Description="This is a very good description"},
-        new TodoTask { Name = "Watch one piece", Duration = 20, TimeStart="19:30 PM", TimeEnd="19:50 PM", StartDate="30-09-24", EndDate="30-09-24", Description="This is also a very good description"},   
-        new TodoTask { Name = "Run a marathon", Duration = 20, TimeStart = "5:15 AM", TimeEnd = "7:45 AM" ,  StartDate="30-09-24", EndDate="30-09-24", Description="This is also a very nice description"}   
+    private List<TodoItemDto> hobbyTasks = new List<TodoItemDto>{
+        new () { Title = "Play football with friends"/*,  = 90,  ="5:15 AM", TimeEnd="6:45 AM", StartDate="30-09-24",*/, DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
+        new TodoItemDto { Title = "\"Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
+        new TodoItemDto { Title = "\"Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
     };
 
     //Shouldn't actually create a new project (fetch the given project)
     protected override void OnInitialized() {
-        CurrentProject = new Project
+        CurrentProject = new ProjectDto()
         {
             Id = ProjectId,
             Name = "Default-Project",
-            TodoLists = new List<TodoList>
+            TodoLists = new List<TodoListDto>
             {
-                new TodoList
+                new()
                 {
                     Name = "Hobby",
-                    Tasks = hobbyTasks
+                    TodoItems = hobbyTasks
                 },
-                new TodoList
+                new ()
                 {
                     Name = "School",
-                    Tasks = new List<TodoTask>
+                    TodoItems = new List<TodoItemDto>
                     {
-                        new TodoTask { Name = "Code front page for C#", Duration = 60, TimeStart="5:15 PM", TimeEnd="6:15 PM", StartDate="01-10-24", EndDate="02-10-24", Description="This is a description"}
+                        new TodoItemDto { Title = "Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
                     }
                 },
-                new TodoList
+                new ()
                 {
                     Name = "Reading",
-                    Tasks = new List<TodoTask>
+                    TodoItems = new List<TodoItemDto>
                     {
-                        new TodoTask { Name = "Read 140 pages of Never finished", Duration = 120, TimeStart="5:15 PM", TimeEnd="7:15 PM", StartDate="02-10-24", EndDate="02-10-24", Description="This is a description of the task!"}
-                    }
-                },
-                // Just for the horizontal scoll
-                new TodoList
-                {
-                    Name = "TEST",
-                    Tasks = new List<TodoTask>
-                    {
-                        new TodoTask { Name = "Testy test", Duration = 120, TimeStart="5:15 PM", TimeEnd="7:15 PM", StartDate="02-10-24", EndDate="02-10-24", Description="This is a description of the task!"}
-                    }
-                },
-                new TodoList
-                {
-                    Name = "TEST 02",
-                    Tasks = new List<TodoTask>
-                    {
-                        new TodoTask { Name = "Testy test", Duration = 120, TimeStart="5:15 PM", TimeEnd="7:15 PM", StartDate="02-10-24", EndDate="02-10-24", Description="This is a description of the task!"}
-                    }
-                },
-                new TodoList
-                {
-                    Name = "TEST 03",
-                    Tasks = new List<TodoTask>
-                    {
-                        new TodoTask { Name = "Testy test", Duration = 120, TimeStart="5:15 PM", TimeEnd="7:15 PM", StartDate="02-10-24", EndDate="02-10-24", Description="This is a description of the task!"},
-                        new TodoTask { Name = "Testy test 2", Duration = 120, TimeStart="5:15 PM", TimeEnd="7:15 PM", StartDate="", EndDate="", Description="This is a description of the task!"}
-                    
+                        new() { Title = "Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
                     }
                 }
             }
         };
     }
 
-    private void ModifiyTask(TodoTask task) {
+    private void ModifiyTask(TodoItemDto task) {
         Console.WriteLine("Modified Task Done");
     }
 
-    private void ShowInputField(TodoList todoList){
+    private void ShowInputField(TodoListDto todoList){
         IsAddingTask = true;
         CurrentListAddingTask = todoList;
     }
 
-    private void CreateTask(TodoList todoList){
+    private void CreateTask(TodoListDto todoList){
         if (string.IsNullOrEmpty(TextValue))
         {
             return;
         }
-        todoList.Tasks.Add (
+
+        var createTodoItemDto = new CreateTodoItemDto();
+
+        createTodoItemDto.Title = TextValue;
+        /*createTodoItemDto.Description = "";
+        createTodoItemDto.Priority = "";
+        createTodoItemDto.DueDate = ;*/
+        
+        /*TODO: Add TodoItemsController*/
+        
+        /*todoList.Tasks.Add (
             new TodoTask {Name = TextValue, TimeStart="", TimeEnd="", StartDate="", EndDate="", Description=""}
-        );
+        );*/
         TextValue = "";
         IsAddingTask = false;
         CurrentListAddingTask = null;
