Using the correct ApplicationUser from Todo.Core

--- a/Todo.Web/Components/Account/Pages/ExternalLogin.razor
+++ b/Todo.Web/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,8 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
