--- a/Todo.Web/Components/Account/Pages/ForgotPassword.razor
+++ b/Todo.Web/Components/Account/Pages/ForgotPassword.razor
@@ -5,7 +5,8 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
