--- a/Todo.Web/Components/Account/Pages/Manage/DeletePersonalData.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/DeletePersonalData.razor
@@ -2,7 +2,8 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
