--- a/Todo.Web/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/Disable2fa.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/Disable2fa"
 
 @using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
