--- a/Todo.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,8 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
