--- a/Todo.Web/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -1,7 +1,8 @@
 ﻿@page "/Account/Manage/GenerateRecoveryCodes"
 
 @using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
