--- a/Todo.Web/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -1,7 +1,8 @@
 ﻿@page "/Account/Manage/ResetAuthenticator"
 
 @using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
