--- a/Todo.Web/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Todo.Web/Components/Account/Pages/RegisterConfirmation.razor
@@ -3,7 +3,8 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
