--- a/Todo.Web/Components/Account/Pages/ResetPassword.razor
+++ b/Todo.Web/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,8 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
