--- a/Todo.Web/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/Todo.Web/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
