--- a/Todo.Web/Components/Account/Shared/ManageNavMenu.razor
+++ b/Todo.Web/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Todo.Web.Data
+@using Todo.Core.Entities
+
 
 @inject SignInManager<ApplicationUser> SignInManager
 
