--- a/Todo.Web/Components/Account/Pages/Register.razor
+++ b/Todo.Web/Components/Account/Pages/Register.razor
@@ -77,7 +77,7 @@
         };
     
 
-        await UserStore.SetUserNameAsync(user, Input.Email, CancellationToken.None);
+        await UserStore.SetUserNameAsync(user, Input.UserName, CancellationToken.None);
         var emailStore = GetEmailStore();
         await emailStore.SetEmailAsync(user, Input.Email, CancellationToken.None);
         var result = await UserManager.CreateAsync(user, Input.Password);
