--- a/Todo.Web/Components/Pages/Home.razor
+++ b/Todo.Web/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using Todo.Api.Dtos.ProjectDtos
 
-@*@attribute [Authorize]*@
+@attribute [Authorize]
 
 <title>Projects</title>
 
