--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -5,7 +5,6 @@
 @using Todo.Api.Dtos.TodoListDtos
 @rendermode InteractiveServer
 
-
 <title>@CurrentProject.Name</title>
 
 <h1>@CurrentProject.Name</h1>
@@ -15,36 +14,81 @@
         @foreach (var todoList in CurrentProject.TodoLists)
         {
             <div class="todo-list-container">
-
                 <div class="todo-list-title">
                     <h5>@todoList.Name</h5>
                     <img src="images/menu.png"/>
                 </div>
 
                 @if(!todoList.TodoItems.IsNullOrEmpty()){  
-                        @foreach (var task in todoList.TodoItems)
-                        {
-                            <div class = "task-container" @onclick="() => ViewTask=true">
-                                <p><span>@task.Title</span></p>
-                                <p>Priority: @task.Priority</p>
-                                @*@if(task. > 0){
-                                    <p>Duration: @task.Duration</p>
-                                }
-                                @if(task.TimeStart!="" || task.TimeEnd!=""){
-                                <p>Time: @task.TimeStart - @task.TimeEnd</p>
-                                }*@
-                                <div class="task-lower-part">
-                                    <div class = "todo-date">
-                                        @*@if(task.StartDate == "" && task.EndDate != ""){
-                                            <p>@task.EndDate</p>
-                                        } else if (task.StartDate != "" && task.EndDate != "") {
-                                            <p>@task.StartDate - @task.EndDate</p>
-                                        }*@
-                                    </div>
-                                    <button @onclick="() => ModifiyTask(task)">Modifiy</button>
+                    @foreach (var task in todoList.TodoItems)
+                    {
+                        <div class="task-container" @onclick="() => ViewTask=true">
+                            <p><span>@task.Title</span></p>
+                            <p>Priority: @task.Priority</p>
+                            <div class="task-lower-part">
+                                <div class="todo-date">
+                                </div>
+                                <div class="dropdown-container" @onclick:stopPropagation>
+
+                                    <button class="modify-button" @onclick="() => HandleIsModifiyer(task)">
+                                        Modify
+                                    </button>
+
+                                    @if (CurrentTodoItem == task)
+                                    {
+                                        <div class="modifiymenu">
+                                            <button>Open card</button>
+                                            <button @onclick="() => ToggleLabelEditor(task)">
+                                                Edit label
+                                            </button>
+                                            <button>Add date</button>
+                                            <button>Move</button>
+                                            <button>Copy</button>
+                                        </div>
+
+                                        @if (IsHandleLabel)
+                                        {
+                                        <div class="label-editor">
+                                            <h5>Title</h5>
+                                            <input type="text" @bind="TextValue" placeholder="Enter label name..." />
+                                            
+                                            <div class="color-picker">
+                                                @foreach (var color in ColorOptions)
+                                                {
+                                                    <div 
+                                                        class="color-option @(SelectedColor == color ? "selected" : "")"
+                                                        style="background-color: @color"
+                                                        @onclick="() => SelectColor(color)">
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+                                        }
+                                    }
+
+                                    @if (task.IsLabelEditorVisible)
+                                    {
+                                        <div class="label-editor">
+                                            <h5>Title</h5>
+                                            <input type="text" @bind="TextValue" placeholder="Enter label name..." />
+                                            <div class="color-picker">
+                                           
+                                                @foreach (var color in ColorOptions)
+                                                {
+                                                    <div 
+                                                        class="color-option @(SelectedColor == color ? "selected" : "")"
+                                                        style="background-color: @color"
+                                                        @onclick="() => SelectColor(color)">
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+                                    }
+            
                                 </div>
                             </div>
-                        }
+                        </div>
+                    }
                 }
                 @if (IsAddingTask && CurrentListAddingTask == todoList)
                 {
@@ -67,21 +111,35 @@
     [Parameter]
     public int ProjectId { get; set; }
     public required ProjectDto CurrentProject { get; set; }
+    private bool IsColorPickerVisible { get; set; } = false;
+    private string SelectedColor { get; set; } = "#4A90E2";  // Default color
 
+    // Define color options
+    private List<string> ColorOptions = new()
+    {
+        "#4A90E2",  // Blue
+        "#50C878",  // Green
+        "#FF6B6B",  // Red
+        "#FFD93D",  // Yellow
+        "#8A2BE2"   // Purple
+    };
+
+    private bool IsHandleLabel { get; set; } = false;
     private bool IsAddingTask { get; set; } = false;
+    private bool IsModifiyingOpen { get; set; } = false;
     private TodoListDto CurrentListAddingTask { get; set; }
+    private TodoItemDto CurrentTodoItem { get; set; }
     private string TextValue = "";
 
     private bool ViewTask {get; set; } = false;
 
     //hardcoded TODO List
     private List<TodoItemDto> hobbyTasks = new List<TodoItemDto>{
-        new () { Title = "Play football with friends"/*,  = 90,  ="5:15 AM", TimeEnd="6:45 AM", StartDate="30-09-24",*/, DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
-        new TodoItemDto { Title = "\"Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
-        new TodoItemDto { Title = "\"Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
+        new () { Title = "Play football with friends", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
+        new TodoItemDto { Title = "Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
+        new TodoItemDto { Title = "Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
     };
 
-    //Shouldn't actually create a new project (fetch the given project)
     protected override void OnInitialized() {
         CurrentProject = new ProjectDto()
         {
@@ -114,10 +172,6 @@
         };
     }
 
-    private void ModifiyTask(TodoItemDto task) {
-        Console.WriteLine("Modified Task Done");
-    }
-
     private void ShowInputField(TodoListDto todoList){
         IsAddingTask = true;
         CurrentListAddingTask = todoList;
@@ -130,21 +184,36 @@
         }
 
         var createTodoItemDto = new CreateTodoItemDto();
-
         createTodoItemDto.Title = TextValue;
-        /*createTodoItemDto.Description = "";
-        createTodoItemDto.Priority = "";
-        createTodoItemDto.DueDate = ;*/
         
-        /*TODO: Add TodoItemsController*/
-        
-        /*todoList.Tasks.Add (
-            new TodoTask {Name = TextValue, TimeStart="", TimeEnd="", StartDate="", EndDate="", Description=""}
-        );*/
         TextValue = "";
         IsAddingTask = false;
         CurrentListAddingTask = null;
     }
 
+    private void HandleIsModifiyer(TodoItemDto todoItem){
+       CurrentTodoItem = CurrentTodoItem == todoItem ? null : todoItem;
+    }
 
+    private void HandleLabel(TodoItemDto todoItem){
+        IsModifiyingOpen = !IsModifiyingOpen;
+
+       if(CurrentTodoItem == null){
+            CurrentTodoItem = todoItem;
+       } else {
+            CurrentTodoItem = null;
+       }
+    }
+
+    private void ToggleLabelEditor(TodoItemDto todoItem){
+        todoItem.IsLabelEditorVisible = !todoItem.IsLabelEditorVisible;
+    }
+
+    private void SelectColor(string color){
+        SelectedColor = color;
+        if (CurrentTodoItem != null) {
+            CurrentTodoItem.LabelColor = color;
+            StateHasChanged();
+        }
+    }
 }
